Fix Phase 1: User validation, toast layout, and tooltip behavior
- Add duplicate contact number validation in UserService
- Validate email/phone/username uniqueness when updating users
- Fix toast layout: horizontal, centered, compact with proper padding
- Improve tooltip behavior: longer delays and unlimited show duration
- Update CSS: toast notification centered alignment

Fixes:
- Issue #2: User duplicate validation for email/phone/username
- Issue #11: Tooltip flashing (now stays visible on hover)
- Issue #20: Toast layout (horizontal, compact, full message display)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>